--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:VnoCWf0+r9K24T/jZzW+Bu3f2azXjtcrQ+VEXQ/95pU=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://exchange-crypto.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+ DB_HOST=127.0.0.1
+ DB_PORT=3303
+ DB_DATABASE=Exchange
+ DB_USERNAME=root
+ DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -62,3 +62,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+COINGECKO_URL="https://api.coingecko.com/api/v3"
+COINGECKO_API_KEY="CG-7Zq2K1oNHmrjhca9E1FX6DP3"
+
+EXCHANGERATE_API_URL="https://v6.exchangerate-api.com/v6/"
+EXCHANGERATE_API_KEY="2d3e69b01a5e133ed31c68c5"
